<resources>
    <string name="app_name">Campus_item_sharing</string>
    <string name="sr_home">主页</string>
    <string name="sr_message">消息</string>
    <string name="sr_setting">设置</string>
    <string name="sr_account_name">用户名</string>
    <string name="sr_account_email">邮箱</string>
    <string name="sr_account_password">密码</string>
    <string name="sr_login">登录</string>
    <string name="sr_sign_up">注册</string>
    <string name="sr_register">没有账号？点击注册</string>
    <string name="sr_exit_login">退出登录</string>
    <string name="sr_not_login">未登录</string>
    <string name="sr_settings">Settings</string>
    <string name="sr_person_info">个人信息</string>
    <string name="sr_my_publish">我的发表</string>
    <string name="sr_my_reply">我的回复</string>
    <string name="sr_browsing_history">浏览历史</string>
    <string name="sr_account">Account</string>
    <string name="sr_change_password">修改密码</string>
    <string name="sr_log_out">退出登录</string>
    <string name="sr_deregister_account">注销账号</string>
    <string name="user_center_login_welcome_text">你好，欢迎加入Campus!</string>
    <string name="user_center_login_create_text">请创建一个账号</string>
    <string name="user_center_login_hint_user_number">请输入您的学号</string>
    <string name="user_center_login_input_text">请输入账号</string>
    <string name="user_center_login_hint_password_text">请输入密码</string>
    <string name="user_center_login_exchange_login_text">已有账号？</string>
    <string name="user_center_login_exchange_sign_text">没有账号？</string>
    <string name="user_center_password_mention_null">密码不能为空！</string>
    <string name="user_center_account_mention_null">账号不能为空！</string>
    <string name="user_center_name_mention_null">用户名不能为空！</string>
    <string name="user_center_home_edit_msg">编辑资料</string>
    <string name="save">保存</string>
    <string name="user_center_edit_psw_origin_hint">请输入原始密码</string>
    <string name="user_center_edit_psw_new_hint">请输入新密码</string>
    <string name="user_center_edit_psw_new_hint_again">请再次确认密码</string>
    <string name="user_center_hint_student_number">学号</string>
    <string name="user_center_hint_student_account">账户</string>
    <string name="user_center_hint_student_email">邮箱</string>
    <string name="confirm">确认</string>
    <string name="add">添加</string>
    <string name="view_all">全部</string>
    <string name="view_book">书籍</string>
    <string name="view_digital">电子设备</string>
    <string name="view_sport">体育</string>
    <string name="post_category">分类</string>
    <string name="post_price">价格</string>
    <string name="post_input_price">请输入价格</string>
    <string name="post_contact_person">联系人</string>
    <string name="post_your_name">你的名字</string>
    <string name="post_phone_number">联系电话</string>
    <string name="post_input_your_phone_number">请输入你的手机号</string>
    <string name="post_label">标签</string>
    <string name="post_image_upload">图片上传</string>
    <string name="post_negotiable">面议</string>
    <string name="post_confirm_publish">确定发布</string>
    <string name="post_description">请简单说明您的物品名称</string>
    <string name="add_friend">添加好友</string>
    <string name="my_friend">我的好友</string>
    <string name="chat_hint">请输入信息</string>
    <string name="send">发送</string>
    <string name="send_message">发送消息</string>
    <string name="received_message">收到消息</string>>
    <string name="gemini_hint">请输入提示内容</string>
    <string name="gemini_generate">生成</string>
    <string name="loading_text">加载中...</string>
    <string name="no_result">未生成结果</string>
    <string name="error_message">生成过程中发生错误</string>
    <string name="Gemini">Gemini</string>
    <string name="office_website">电科官网</string>
    <string name="door_lock">门禁解锁</string>
    <string name="object_share">课表查询</string>
    <string name="deep_seek">成电Seek</string>
    <string name="campus_card">校园卡服务</string>
</resources>