<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="0dp"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/top_message_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="0dp"
        android:paddingBottom="10dp"
        android:background="@color/light_blue1"> <!-- 添加 gravity 属性使所有子项居中 -->

        <ImageView
            android:id="@+id/btn_login_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="0dp"
            android:src="@drawable/ic_icon_back_black"/>

    </LinearLayout>


    <ImageView
        android:id="@+id/upload_image"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_post_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <!-- 分类选择 -->
        <TextView
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:text="@string/sr_account_name"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/account_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/edit_text"
            android:hint="@string/post_your_name"
            android:padding="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <!-- 分类选择 -->
        <TextView
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:text="@string/post_category"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/category_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/post_your_name"
            android:background="@android:drawable/edit_text"
            android:padding="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:text="@string/post_price"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/price_input"
            android:layout_width="160dp"
            android:layout_height="45dp"
            android:layout_marginStart="0dp"

            android:background="@android:drawable/edit_text"
            android:hint="@string/post_price"
            android:padding="10dp" />

        <Button
            android:id="@+id/add_my_friend"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:text="@string/add_friend" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <!-- 分类选择 -->
        <TextView
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:text="@string/post_contact_person"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/contact_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/edit_text"
            android:hint="@string/post_your_name"
            android:padding="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:text="@string/post_phone_number"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/contact_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/post_input_your_phone_number"
            android:background="@android:drawable/edit_text"
            android:padding="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="16dp">


        <TextView
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:text="@string/post_label"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp"/>


        <TextView
            android:id="@+id/tag_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_all"
            android:padding="8dp"
            android:background="@drawable/tag_background"
            android:textColor="@color/black"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/tag_books"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_book"
            android:padding="8dp"
            android:background="@drawable/tag_background"
            android:textColor="@color/black"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/tag_electronics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_digital"
            android:padding="8dp"
            android:background="@drawable/tag_background"
            android:textColor="@color/black"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/tag_sports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_sport"
            android:padding="8dp"
            android:background="@drawable/tag_background"
            android:textColor="@color/black"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <!-- 说明文本输入框 -->
        <EditText
            android:id="@+id/post_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/edit_text"
            android:hint="@string/post_description"
            android:maxLines="3"
            android:scrollbars="vertical"
            android:textColor="@color/gray"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>